fix loader size and logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,11 @@ h4,.heading-4 {
     line-height: 1.5;
     letter-spacing: 0;
 }
+@media (max-width:1100px){
+    .rd-navbar-brand h4{
+        line-height:2;
+    }
+}
 
 @media(min-width: 1200px) {
     h4,.heading-4 {
@@ -9797,7 +9802,7 @@ html.mobile .ui-to-top,html.tablet .ui-to-top {
     display: flex;
     align-items: center;
     height: 56px;
-    padding: 8px
+    padding: 8px;
 }
 
 .rd-navbar-fixed .rd-navbar-nav-wrap {
